--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h2>Οι εργασίες μου</h2>
     <a target="_blank" href="map"> <span >Χάρτης</span>
     </a>
-    <img src="fot">
+    <img src="fot1">
   </body>
 </html>
