--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
     <title>Stefi Moschopoulou</title>
   </head>
   <body>
+    <div>
     <h1>Stefi Moschopoulou</h1>
     <h2>Οι εργασίες μου</h2>
     <a target="_blank" href="map"> <span >Χάρτης</span>
     </a>
+    </div>
+    
+    <div>
     <img src="fot.jpg">
+    </div>
   </body>
 </html>
